<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".SendOTPActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="#2196F3"
            android:text="Skip"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>



        <ImageView
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/enternumber"
            android:contentDescription="@string/mobile_icon_for_enter_mobile_number" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:srcCompat="@drawable/mobilenumber"
            android:contentDescription="@string/mobilenumhin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textColor="#616161"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/enter_mobile_number"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:ems="10"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colorDivider"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/get_otp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/squarepic"


                android:contentDescription="@string/minus1square_pic" />
        </FrameLayout>


    </LinearLayout>
</ScrollView>