<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="end">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green">

        <SearchView
            android:id="@+id/search_Text"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/stroke_background"
            android:iconifiedByDefault="false"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="-9dp"
            android:queryHint="@string/search_here"
            android:searchIcon="@drawable/ic_baseline_search_24"
            android:textColor="@color/colorTextPrimary"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnMic"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/mic"
            android:contentDescription="@string/menuicon"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintEnd_toStartOf="@+id/btnCam"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnCam"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/camera"
            android:contentDescription="@string/menuicon"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:contentDescription="@string/menuicon"
            android:elevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.Toolbar>

        <HorizontalScrollView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <GridLayout
                android:id="@+id/grdlyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent">

                <Button
                    android:tag="All"
                    android:id="@+id/cat_All"
                    style="@style/CategoryButton1"
                    android:layout_column="0"
                    android:background="@drawable/img" />

                <TextView
                    android:tag="tAll"
                    style="@style/CategoryText1"
                    android:id="@+id/idAll"
                    android:layout_column="0"
                    android:text="@string/all"/>

                <Button
                    android:tag="Oil"
                    android:id="@+id/cat_oil"
                    style="@style/CategoryButton1"
                    android:layout_column="1"
                    android:background="@drawable/cat_oil" />

                <TextView
                    android:tag="tOil"
                    style="@style/CategoryText1"
                    android:id="@+id/idOil"
                    android:layout_column="1"
                    android:text="@string/oil"/>


                <Button
                    android:tag="Daal"
                    android:id="@+id/cat_dal"
                    style="@style/CategoryButton1"
                    android:layout_column="2"
                    android:background="@drawable/cat_dal"/>

                <TextView
                    android:tag="tDaal"
                    style="@style/CategoryText1"
                    android:id="@+id/idDal"
                    android:layout_column="2"
                    android:text="@string/daal"/>

                <Button
                    android:tag="Sarf_Sabun"
                    android:id="@+id/cat_sabun"
                    style="@style/CategoryButton1"
                    android:layout_column="3"
                    android:background="@drawable/cat_sabun"/>

                <TextView
                    android:tag="tSarf_Sabun"
                    style="@style/CategoryText1"
                    android:id="@+id/idSabun"
                    android:layout_column="3"
                    android:text="@string/soap"/>


                <Button
                    android:tag="Safai"
                    android:id="@+id/cat_safai"
                    style="@style/CategoryButton1"
                    android:layout_column="4"
                    android:background="@drawable/cat_safai"/>

                <TextView
                    android:tag="tSafai"
                    style="@style/CategoryText1"
                    android:id="@+id/idSafai"
                    android:layout_column="4"
                    android:text="@string/cleaning"/>

                <Button
                    android:tag="Household"
                    android:id="@+id/cat_household"
                    style="@style/CategoryButton1"
                    android:layout_column="5"
                    android:background="@drawable/cat_household" />

                <TextView
                    android:tag="tHousehold"
                    style="@style/CategoryText1"
                    android:id="@+id/idHousehold"
                    android:layout_column="5"
                    android:text="@string/household"/>

                <Button
                    android:tag="Anaaj"
                    android:id="@+id/Anaaj"
                    style="@style/CategoryButton1"
                    android:layout_column="6"
                    android:background="@drawable/cat_anaaj"/>

                <TextView
                    android:tag="tAnaaj"
                    style="@style/CategoryText1"
                    android:id="@+id/idAnaaj"
                    android:layout_column="6"
                    android:text="@string/flours"/>

                <Button
                    android:tag="Mirch_Masale"
                    android:id="@+id/cat_masale"
                    style="@style/CategoryButton1"
                    android:layout_column="7"
                    android:background="@drawable/cat_masale"/>

                <TextView
                    android:tag="tMirch_Masale"
                    style="@style/CategoryText1"
                    android:id="@+id/idMasale"
                    android:layout_column="7"
                    android:text="@string/spices"/>

                <Button
                    android:tag="Beauty"
                    android:id="@+id/cat_beauty"
                    style="@style/CategoryButton1"
                    android:layout_column="8"
                    android:background="@drawable/cat_beauty"/>

                <TextView
                    android:tag="tBeauty"
                    style="@style/CategoryText1"
                    android:id="@+id/idBeauty"
                    android:layout_column="8"
                    android:text="@string/beauty"/>

                <Button
                    android:tag="Vegetables"
                    android:id="@+id/cat_sabji"
                    style="@style/CategoryButton1"
                    android:layout_column="9"
                    android:background="@drawable/cat_sabji"/>

                <TextView
                    android:tag="tVegetables"
                    style="@style/CategoryText1"
                    android:id="@+id/idSabji"
                    android:layout_column="9"
                    android:text="@string/sabji"/>

                <Button
                    android:tag="Medical"
                    android:id="@+id/cat_medical"
                    style="@style/CategoryButton1"
                    android:layout_column="10"
                    android:background="@drawable/cat_medical"/>

                <TextView
                    android:tag="tMedical"
                    style="@style/CategoryText1"
                    android:id="@+id/idMedical"
                    android:layout_column="10"
                    android:text="@string/madical"/>

                <Button
                    android:tag="Hardware"
                    android:id="@+id/cat_hardware"
                    style="@style/CategoryButton1"
                    android:layout_column="11"
                    android:background="@drawable/cat_hardware"/>

                <TextView
                    android:tag="tHardware"
                    style="@style/CategoryText1"
                    android:id="@+id/idHardware"
                    android:layout_column="11"
                    android:text="@string/hardware"/>

                <Button
                    android:tag="Electronics"
                    android:id="@+id/cat_electric"
                    style="@style/CategoryButton1"
                    android:layout_column="12"
                    android:background="@drawable/cat_electric"/>

                <TextView
                    android:tag="tElectronics"
                    style="@style/CategoryText1"
                    android:id="@+id/idElectric"
                    android:layout_column="12"
                    android:text="@string/electric"/>

                <Button
                    android:tag="Farming"
                    android:id="@+id/cat_farming"
                    style="@style/CategoryButton1"
                    android:layout_column="13"
                    android:background="@drawable/cat_farming"/>

                <TextView
                    android:tag="tFarming"
                    style="@style/CategoryText1"
                    android:id="@+id/idFarming"
                    android:layout_column="13"
                    android:text="@string/farming"/>

                <Button
                    android:tag="Pets"
                    android:id="@+id/cat_pets"
                    style="@style/CategoryButton1"
                    android:layout_column="14"
                    android:background="@drawable/cat_cow"/>

                <TextView
                    android:tag="tPets"
                    style="@style/CategoryText1"
                    android:id="@+id/idPets"
                    android:layout_column="14"
                    android:text="@string/pet"/>

                <Button
                    android:tag="Other_Items"
                    android:id="@+id/cat_others"
                    style="@style/CategoryButton1"
                    android:layout_column="15"
                    android:background="@drawable/cat_others"/>

                <TextView
                    android:tag="tOther_Items"
                    style="@style/CategoryText1"
                    android:id="@+id/idOthers"
                    android:layout_column="15"
                    android:text="@string/other"/>


            </GridLayout>

        </HorizontalScrollView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/category">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:textColor="@color/customerNameColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/customerName"
                    android:layout_marginStart="70dp"
                    android:text="@string/vill_xyz_tehsil_xyz"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/editCustomerName"
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@+id/customerName"
                    android:background="@drawable/arrow_down"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="150dp"
                    android:background="#f2f2f2"
                    tools:listitem="@layout/row_product">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/green_bg_round"
            android:backgroundTint="@color/green"
            android:elevation="8dp"
            android:outlineAmbientShadowColor="@color/colorTextPrimary"
            android:outlineSpotShadowColor="@color/colorTextPrimary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lot"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:layout_marginBottom="2dp"
                android:paddingBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/final_cart" />

            <TextView
                android:id="@+id/total_purchase"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorCreamBackground"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/lot" />

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="@color/green"
                android:gravity="center"
                android:shadowColor="@color/colorTextPrimary"
                android:text="@string/place_order"
                android:textColor="@color/colorCreamBackground"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/arrow"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/arrow"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/arrow_forward"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>